# BetterMoneyManager

./: .gitignore  BetterMoneyManager.sln  Planning.md  README.md
src/: App.razor  BetterMoneyManager.csproj  Program.cs  _Imports.razor  package-lock.json  package.json  tailwind.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: accounts.rs  commands.rs  database.rs  lib.rs  main.rs  menus.rs  transactions.rs
src/Components/Accounts/: AccountModify.razor  AccountSelect.razor
src/Models/: Account.cs  AccountType.cs  SelectedPage.cs
src/Pages/: AccountEditPage.razor  AccountSelectPage.razor  Home.razor
src/Properties/: launchSettings.json
src/Store/AccountSlice/: AccountActions.cs  AccountEffects.cs  AccountReducers.cs  AccountState.cs
src/Store/AppSlice/: AppActions.cs  AppEffects.cs  AppReducers.cs  AppState.cs
src/wwwroot/: index.html  tauri.js
